[gd_scene load_steps=2 format=3 uid="uid://b0oavecy2l8p5"]

[ext_resource type="Script" path="res://screens/game/mission_log/mission_log_window.gd" id="1_5is5j"]

[node name="MissionLogWindow" type="Window" node_paths=PackedStringArray("mission_list", "description_label", "cost_label", "reward_label", "forfeit_button")]
title = "Mission Log"
initial_position = 2
size = Vector2i(700, 400)
script = ExtResource("1_5is5j")
mission_list = NodePath("PanelContainer/VSplitContainer/Missions/ItemList")
description_label = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/DescriptionLabel")
cost_label = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/CostLabel")
reward_label = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/RewardLabel")
forfeit_button = NodePath("PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/ForfeitButton")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer"]
layout_mode = 2

[node name="Missions" type="ScrollContainer" parent="PanelContainer/VSplitContainer"]
custom_minimum_size = Vector2(2.08165e-12, 150)
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="ItemList" type="ItemList" parent="PanelContainer/VSplitContainer/Missions"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
auto_height = true

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.0
theme_override_constants/margin_top = 0

[node name="HBoxContainer" type="HBoxContainer" parent="PanelContainer/VSplitContainer/MarginContainer"]
custom_minimum_size = Vector2(150, 2.08165e-12)
layout_mode = 2
size_flags_vertical = 3

[node name="DescriptionLabel" type="RichTextLabel" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
bbcode_enabled = true
text = "Here is a [i]mission[/i] [b]description[/b]."

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="CostHeading" type="Label" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Deposit"
uppercase = true

[node name="CostLabel" type="Label" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "1235 "

[node name="Padding" type="Control" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 8)
layout_mode = 2

[node name="RewardHeading" type="Label" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Reward"
uppercase = true

[node name="RewardLabel" type="Label" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "123 credits
1234 lumins"

[node name="ForfeitButton" type="Button" parent="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
text = "FORFEIT"

[connection signal="close_requested" from="." to="." method="_on_close_requested"]
[connection signal="empty_clicked" from="PanelContainer/VSplitContainer/Missions/ItemList" to="." method="_on_empty_clicked"]
[connection signal="item_selected" from="PanelContainer/VSplitContainer/Missions/ItemList" to="." method="_on_item_selected"]
[connection signal="pressed" from="PanelContainer/VSplitContainer/MarginContainer/HBoxContainer/VBoxContainer/ForfeitButton" to="." method="_on_forfeit_pressed"]
